--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,4 +15,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/center_on_me"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="40dp"
+        android:adjustViewBounds="true"
+        android:backgroundTintMode="screen"
+        android:contentDescription="@string/center_on_me"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_baseline_my_location_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
