--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -17,7 +17,7 @@
 
     <ImageButton
         android:id="@+id/center_on_me"
-        android:layout_width="60dp"
+        android:layout_width="55dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="30dp"
@@ -26,8 +26,8 @@
         android:contentDescription="@string/center_on_me"
         android:scaleType="fitXY"
         android:src="@drawable/ic_baseline_my_location_24"
-        app:tint="@color/orange_lighter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/orange_lighter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
