--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -17,8 +17,8 @@
 
     <ImageButton
         android:id="@+id/center_on_me"
-        android:layout_width="55dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="30dp"
         android:adjustViewBounds="true"
@@ -28,6 +28,21 @@
         android:src="@drawable/ic_baseline_my_location_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/orange_lighter" />
+
+    <ImageButton
+        android:id="@+id/update_poi_pins"
+        android:layout_width="wrap_content"
+        android:layout_height="55dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="30dp"
+        android:adjustViewBounds="true"
+        android:backgroundTintMode="screen"
+        android:contentDescription="@string/center_on_me"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_baseline_add_location_alt_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/center_on_me"
         app:tint="@color/orange_lighter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
