--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,9 +27,9 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorSurface"
                 android:elevation="7dp"
-                android:theme="@style/Theme.Go4Lunch.toolbar"
-                app:titleTextColor="@color/design_default_color_on_primary">
+                app:titleTextColor="?attr/colorOnSurface">
 
                 <androidx.appcompat.widget.SearchView
                     android:layout_width="wrap_content"
@@ -61,6 +61,8 @@
             android:layout_marginEnd="0dp"
             android:background="?android:attr/windowBackground"
             android:elevation="7dp"
+            app:itemIconTint="@color/bottom_nav_color"
+            app:itemTextColor="@color/bottom_nav_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -75,7 +77,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:layout_marginTop="?attr/actionBarSize"
-        android:background="@color/orange_lighter"
+        android:theme="@style/Theme.Go4Lunch.drawer"
         app:headerLayout="@layout/side_nav_panel_header"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
