--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -22,13 +22,13 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="30dp"
         android:adjustViewBounds="true"
-        android:backgroundTintMode="screen"
         android:contentDescription="@string/center_on_me"
         android:scaleType="fitXY"
         android:src="@drawable/ic_baseline_my_location_24"
+        app:backgroundTint="?attr/colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/orange_lighter" />
+        app:tint="?attr/colorOnSecondary" />
 
     <ImageButton
         android:id="@+id/update_poi_pins"
@@ -37,12 +37,12 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="30dp"
         android:adjustViewBounds="true"
-        android:backgroundTintMode="screen"
         android:contentDescription="@string/center_on_me"
         android:scaleType="fitXY"
         android:src="@drawable/ic_baseline_add_location_alt_24"
+        app:backgroundTint="?attr/colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/center_on_me"
-        app:tint="@color/orange_lighter" />
+        app:tint="?attr/colorOnSecondary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
