--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -70,6 +70,7 @@
         android:id="@+id/list_item_image"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:background="@color/orange"
         android:src="@drawable/ic_baseline_image_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
