better night theme

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,15 +5,16 @@
         <item name="colorPrimary">@color/white</item>
         <item name="colorOnPrimary">@color/orange</item>
         <item name="colorPrimaryVariant">@color/orange_lighter</item>
+        <item name="android:windowBackground">@color/white</item>
         <!-- Secondary brand color. I use them on buttons -->
-        <item name="colorSecondary">?android:attr/windowBackground</item>
+        <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/orange_lighter</item>
         <item name="colorOnSecondary">@color/black</item>
 
         <item name="colorSurface">@color/orange</item>
         <item name="colorOnSurface">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSurface</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/orange_dark</item>
         <!-- Customize your theme here. -->
 
         <item name="colorControlNormal">@color/white</item>
