--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -16,21 +16,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/center_on_me"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="30dp"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/center_on_me"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_baseline_my_location_24"
-        app:backgroundTint="?attr/colorSecondary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tint="?attr/colorOnSecondary" />
-
-    <ImageButton
         android:id="@+id/update_poi_pins"
         android:layout_width="wrap_content"
         android:layout_height="55dp"
@@ -42,7 +27,22 @@
         android:src="@drawable/ic_baseline_add_location_alt_24"
         app:backgroundTint="?attr/colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/center_on_me"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="?attr/colorOnSecondary" />
+
+    <ImageButton
+        android:id="@+id/center_on_me"
+        android:layout_width="wrap_content"
+        android:layout_height="55dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="30dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/center_on_me"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_baseline_my_location_24"
+        app:backgroundTint="?attr/colorSecondary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/update_poi_pins"
         app:tint="?attr/colorOnSecondary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
