--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,18 +2,19 @@
     <!-- Base application theme. -->
     <style name="Theme.Go4Lunch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/orange_darker</item>
+        <item name="colorPrimary">@color/brown</item>
+        <item name="colorOnPrimary">@color/orange</item>
+        <item name="colorPrimaryVariant">@color/orange_dark</item>
+        <item name="android:windowBackground">@color/brown</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">?android:attr/windowBackground</item>
+        <item name="colorSecondary">@color/brown</item>
         <item name="colorSecondaryVariant">@color/orange_dark</item>
         <item name="colorOnSecondary">@color/white</item>
 
-        <item name="colorSurface">@color/orange_darker</item>
+        <item name="colorSurface">@color/brown</item>
         <item name="colorOnSurface">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSurface</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
 
         <item name="colorControlNormal">@color/white</item>
