osmdroid BONUS PACK excision

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,9 @@
 <resources>
     <color name="orange_lighter">#ff8a50</color>
     <color name="orange">#ff5722</color>
-    <color name="orange_dark">#c41b00</color>
-    <color name="orange_darker">#781100</color>
+    <color name="orange_darker">#c41b00</color>
+    <color name="brown_lighter">#42302D</color>
     <color name="brown">#2B211F</color>
-    <color name="teal_200">#03DAC5</color>
-    <color name="teal_700">#018786</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
 </resources>
