--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,11 +4,11 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/brown</item>
         <item name="colorOnPrimary">@color/orange</item>
-        <item name="colorPrimaryVariant">@color/orange_dark</item>
+        <item name="colorPrimaryVariant">@color/orange_darker</item>
         <item name="android:windowBackground">@color/brown</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/brown</item>
-        <item name="colorSecondaryVariant">@color/orange_dark</item>
+        <item name="colorSecondaryVariant">@color/orange_darker</item>
         <item name="colorOnSecondary">@color/white</item>
 
         <item name="colorSurface">@color/brown</item>
@@ -23,7 +23,7 @@
     </style>
 
     <style name="Theme.Go4Lunch.drawer" parent="Theme.Go4Lunch">
-        <item name="colorSurface">@color/orange_darker</item>
+        <item name="colorSurface">@color/brown_lighter</item>
         <item name="colorOnSurface">@color/white</item>
     </style>
 </resources>
