retrieving and displaying advanced POI data

--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_margin="@dimen/list_item_margin">
 
     <TextView
         android:id="@+id/list_item_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@id/list_item_address"
         app:layout_constraintEnd_toStartOf="@+id/list_item_distance"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,6 +22,9 @@
         android:id="@+id/list_item_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/list_item_margin"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@id/list_item_name"
         app:layout_constraintEnd_toStartOf="@id/list_item_image"
         app:layout_constraintStart_toEndOf="@id/list_item_name"
@@ -30,6 +35,8 @@
         android:id="@+id/list_item_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@id/list_item_hours"
         app:layout_constraintEnd_toStartOf="@+id/list_item_colleagues"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +47,9 @@
         android:id="@+id/list_item_colleagues"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/list_item_margin"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@id/list_item_address"
         app:layout_constraintEnd_toStartOf="@id/list_item_image"
         app:layout_constraintStart_toEndOf="@id/list_item_address"
@@ -50,6 +60,8 @@
         android:id="@+id/list_item_hours"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/list_item_likes"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +72,9 @@
         android:id="@+id/list_item_likes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/list_item_margin"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/list_item_image"
         app:layout_constraintStart_toEndOf="@id/list_item_hours"
