--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -16,6 +16,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
+        <item name="android:listDivider">@color/white</item>
 
         <item name="colorControlNormal">@color/white</item>
         <item name="android:editTextColor">@color/white</item>
@@ -25,5 +26,10 @@
     <style name="Theme.Go4Lunch.drawer" parent="Theme.Go4Lunch">
         <item name="colorSurface">@color/brown_lighter</item>
         <item name="colorOnSurface">@color/white</item>
+    </style>
+
+    <style name="RatingBar" parent="android:style/Widget.Material.RatingBar.Small">
+        <item name="colorControlNormal">@color/grey</item>
+        <item name="colorControlActivated">@color/gold</item>
     </style>
 </resources>
