--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/list_item_margin"
         android:ellipsize="end"
+        android:textColor="@color/grey"
         android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@id/list_item_name"
         app:layout_constraintEnd_toStartOf="@id/list_item_image"
