--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/orange_darker</item>
         <!-- Customize your theme here. -->
-        <item name="android:listDivider">@color/orange_lighter</item>
+        <item name="android:listDivider">@color/grey</item>
 
         <item name="colorControlNormal">@color/white</item>
         <item name="android:editTextColor">@color/white</item>
