--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:theme="@style/Theme.Go4Lunch.drawer">
 
     <ImageView
         android:id="@+id/eat_at_work"
@@ -10,9 +12,9 @@
         android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/app_name"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/shutterstock_649359244_" />
 
     <TextView
@@ -21,7 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:text="@string/app_name"
-        android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +38,7 @@
         android:src="@drawable/ic_baseline_group_24"
         app:layout_constraintBottom_toBottomOf="@id/eat_at_work"
         app:layout_constraintStart_toStartOf="parent"
-        app:tint="@color/white" />
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/drawer_user_name"
@@ -45,11 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/app_name"
-        android:textColor="@color/white"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/drawer_user_email"
         app:layout_constraintStart_toEndOf="@id/drawer_avatar"
-        app:layout_constraintTop_toTopOf="@id/drawer_avatar"
-        app:layout_constraintBottom_toTopOf="@id/drawer_user_email"/>
+        app:layout_constraintTop_toTopOf="@id/drawer_avatar" />
 
     <TextView
         android:id="@+id/drawer_user_email"
@@ -57,10 +57,30 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/app_name"
-        android:textColor="@color/white"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/drawer_avatar"
         app:layout_constraintStart_toEndOf="@id/drawer_avatar"
-        app:layout_constraintTop_toBottomOf="@id/drawer_user_name"
-        app:layout_constraintBottom_toBottomOf="@id/drawer_avatar"/>
+        app:layout_constraintTop_toBottomOf="@id/drawer_user_name" />
+
+    <TextView
+        android:id="@+id/credit"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:text="@string/credits"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@id/drawer_avatar"
+        app:layout_constraintTop_toTopOf="@id/credit_text" />
+
+    <TextView
+        android:id="@+id/credit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingBottom="10dp"
+        android:text="@string/credits_text"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/drawer_user_name"
+        app:layout_constraintTop_toBottomOf="@id/eat_at_work" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
