--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,8 @@
         <item name="colorOnSurface">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/orange_darker</item>
+        <!-- SearchView Widget cursor color -->
+        <item name="colorAccent">@color/white</item>
         <!-- Customize your theme here. -->
         <item name="android:listDivider">@color/grey</item>
 
