--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
         <item name="colorOnSurface">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/orange_darker</item>
+        <item name="android:colorEdgeEffect">@color/orange</item>
         <!-- SearchView Widget cursor color -->
         <item name="colorAccent">@color/white</item>
         <!-- Customize your theme here. -->
