--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -104,9 +104,9 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:background="@color/orange"
-        android:src="@drawable/ic_baseline_image_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_baseline_image_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
