--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="white">#FFFFFF</color>
     <color name="grey">#7A7A7A</color>
     <color name="gold">#FFC107</color>
+
+    <color name="colorOnSecondary">@color/black</color>
 </resources>
