--- a/app/src/main/res/layout/fragment_mates_item.xml
+++ b/app/src/main/res/layout/fragment_mates_item.xml
@@ -19,6 +19,7 @@
         android:id="@+id/mates_item_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:ellipsize="end"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/mates_item_image"
