--- a/app/src/main/res/layout/fragment_mates_item.xml
+++ b/app/src/main/res/layout/fragment_mates_item.xml
@@ -25,5 +25,6 @@
         app:layout_constraintBottom_toBottomOf="@id/mates_item_image"
         app:layout_constraintStart_toEndOf="@id/mates_item_image"
         app:layout_constraintTop_toTopOf="@id/mates_item_image"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:text="@tools:sample/first_names" />
 </androidx.constraintlayout.widget.ConstraintLayout>
