full code analysis: make linter happy

--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -5,6 +5,7 @@
             <certificates src="@raw/my_cert" />
             <certificates src="system" />
             <certificates src="user" />
+            <!-- todo Nino, pas spur de moi là -->
         </trust-anchors>
     </base-config>
     <domain-config>
