--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,11 @@
     <color name="grey">#7A7A7A</color>
     <color name="gold">#FFC107</color>
 
+    <color name="colorPrimary">@color/white</color>
+    <color name="colorPrimaryVariant">@color/orange_lighter</color>
     <color name="colorOnSecondary">@color/black</color>
+    <color name="colorSurface">@color/orange</color>
+    <color name="androidStatusBarColor">@color/orange_darker</color>
+    <color name="androidListDivider">@color/grey</color>
+    <color name="drawerSurface">@color/orange_lighter</color>
 </resources>
