--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -9,6 +9,7 @@
         </trust-anchors>
     </base-config>
     <domain-config>
+        <!-- todo add a section for nominatim? comme mes rétrofit ne marchent pas sur téléphone -->
         <domain includeSubdomains="true">192.168.1.79</domain>
         <trust-anchors>
             <certificates src="@raw/my_cert" />
