--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,8 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:theme="@style/Theme.Go4Lunch.preferences"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/orange"
+    android:theme="@style/Theme.Go4Lunch.preferences">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -16,6 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:background="@color/orange"
             android:theme="@style/Theme.Go4Lunch.titleBar"
             app:layout_constraintTop_toTopOf="parent"
             app:titleTextColor="@color/white" />
@@ -26,6 +28,7 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:fillViewport="true"
         app:layout_constraintBottom_toTopOf="@id/landing_soup"
         app:layout_constraintTop_toBottomOf="@id/appbar">
 
