--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="green">#4CAF50</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="white_ish">#8FFFFFFF</color>
     <color name="grey">#7A7A7A</color>
     <color name="gold">#FFC107</color>
 
