--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,9 +43,12 @@
     </style>
 
     <style name="Theme.Go4Lunch.preferences" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- this works only when theme is set in Manifest or in Activity's onCreate() override -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/androidStatusBarColor</item>
-        <item name="android:background">@color/colorSurface</item>
+        <item name="colorPrimary">@color/white</item><!-- Scroll end indicator -->
         <item name="android:textColor">@color/white</item>
+        <item name="android:textColorSecondary">@color/white_ish</item>
+        <item name="android:tint">@color/white</item>
     </style>
 
 </resources>
