--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -4,12 +4,17 @@
         <trust-anchors>
             <certificates src="@raw/my_cert" />
             <certificates src="system" />
-            <certificates src="user" />
-            <!-- todo Nino, pas spur de moi là -->
         </trust-anchors>
     </base-config>
     <domain-config>
-        <!-- todo add a section for nominatim? comme mes rétrofit ne marchent pas sur téléphone -->
+        <!-- todo remove if it makes not retrofit work on device -->
+        <domain includeSubdomains="true">nominatim.openstreetmap.org</domain>
+        <trust-anchors>
+            <certificates src="system" />
+        </trust-anchors>
+    </domain-config>
+
+    <domain-config>
         <domain includeSubdomains="true">192.168.1.79</domain>
         <trust-anchors>
             <certificates src="@raw/my_cert" />
